# mcp-mitm-mem0

./: .env.example  .gitignore  .justfile  README.md  config.yaml  conftest.py  main.py  memory_addon.py  pyproject.toml  pytest.ini
.taskmaster/: config.json  state.json
docs/: CONFIGURATION.md  README.md  SECURITY.md  architecture.md  dependencies.md  deployment.md  onboarding.md  security.md
examples/: demo_observability.py  example_client.py  simple_test_addon.py
hooks/: README.md  auto_reflection_hook.py  config_templates.json  memory_analyze.py  memory_curation_hook.py  memory_search.py  memory_store.py  permission_intelligence.py  pre_response_hook.py  project_continuity_hook.py  session_context.py  setup_hooks.py  utils.py
mcp_mitm_mem0/: __init__.py  config.py  mcp_server.py  memory_service.py  reflection_agent.py
plans/: 2025-01-07-hooks-integration.md
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_mcp_server.py  test_memory_service.py  test_mitm_addon.py  test_reflection_agent.py  test_simple_addon.py  utils.py
